Split router to blog and login page Add loginForm and validation
Use ReactiveFormsModule

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,1 @@
-<ng-container>
-  <app-header></app-header>
-
-  <app-main></app-main>
-
-  <app-footer></app-footer>
-</ng-container>
-
-
+<router-outlet></router-outlet>
