--- a/src/app/blog/header/header.component.html
+++ b/src/app/blog/header/header.component.html
@@ -28,7 +28,10 @@
           {{ keyword }}
         </a>
         <ng-template #loginBtn>
-          <a class="btn btn-sm btn-outline-secondary" href="#">Login</a>
+          <a a routerLink="/login" routerLinkActive="active"
+            class="btn btn-sm btn-outline-secondary">
+            Login
+          </a>
         </ng-template>
       </div>
     </div>
