--- a/src/app/blog/header/header.component.html
+++ b/src/app/blog/header/header.component.html
@@ -5,7 +5,7 @@
         <a #subscribeLink class="text-muted" (click)="Subscribe(inputKeyword.value)">Subscribe</a>
       </div>
       <div class="col-4 text-center">
-        <a class="blog-header-logo text-dark" [href]="link">{{ title }}</a>
+        <a class="blog-header-logo text-dark" [href]="link" target="_blank">{{ title }}</a>
       </div>
       <div class="col-4 d-flex justify-content-end align-items-center">
         <div class="input-group input-group-sm header-search">
@@ -41,7 +41,7 @@
     <nav class="nav d-flex justify-content-between">
       <a *ngFor="let category of categories"
         class="p-2 text-muted"
-        (click)="changePost(category)">
+        (click)="changeCategory(category)">
         {{ category }}
       </a>
       <!--
