--- a/src/app/blog/main/main.component.scss
+++ b/src/app/blog/main/main.component.scss
@@ -1,3 +1,12 @@
+@import url('https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@400&display=swap');
+
+ul.code-sample {
+  font-family: 'Source Sans Pro', sans-serif;
+  & > li span {
+    color: rgba(65, 131, 215, 1);
+  }
+}
+
 .latest-list {
   padding-left: 20px;
 
